# AzureApi-Embeddings

./: Cargo.toml
src/: main.rs
src/Embeddings/src/: lib.rs
