workspace = { members = [ "src/AzureApi","src/Embeddings"] }
[package]
name = "AzureApi0_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
AzureApi = { path = "src/AzureApi" }
Embeddings = { path = "src/Embeddings" }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.115"
reqwest = { version = "0.12.3", features = ["json"] }
